--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "autoprefixer-core": "^6.0.1",
     "grunt": "~0.4.2",
+    "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-sass": "^0.7.3",
@@ -25,6 +27,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-curl": "*",
     "grunt-phpdocumentor": "~0.4.1",
+    "grunt-postcss": "^0.7.1",
     "grunt-wp-i18n": "~0.4.0"
   }
 }
